Opening java.lang.invoke to com.oracle.coherenc in default failsafe command line (merge main -> ce/main 92769)
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 92770]